@@ -90,18 +90,6 @@ tasks.named("processResources") {
     dependsOn("generateModMetadata")
 }
 
-tasks.withType(JavaCompile).configureEach {
-    options.compilerArgs += [
-            "--add-modules", "jdk.incubator.vector"
-    ]
-}
-
-tasks.withType(JavaExec).configureEach {
-    jvmArgs += [
-            "--add-modules", "jdk.incubator.vector"
-    ]
-}
-
 neoForge.ideSyncTask tasks.named("generateModMetadata")
 
 
